// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> set as disabled matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular y-button__state-disabled"
  disabled={true}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> set as loading matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular y-button__state-loading"
  disabled={true}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="button"
>
  <Block
    className="y-button--content__hidden"
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
  <span
    className="y-button--spinner"
  >
    <Spinner
      color="light"
      hideText={true}
      isCentered={true}
      size="small"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with additional className matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular TEST_CLASSNAME"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with aria label matches its snapshot 1`] = `
<BaseButton
  ariaLabel="Aria description"
  baseClassName="ms-Button"
  className="y-button y-button__size-regular"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with button type matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with default options matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with fullWidth matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular y-button__fullWidth"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with icon matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    <span
      className="y-button--icon-wrapper-left"
    >
      <Accounts />
    </span>
    Click Me
    <div
      className="y-button--secondary-text"
    >
      <span
        className="y-button--icon-wrapper-left"
      >
        <Accounts />
      </span>
    </div>
  </Block>
</BaseButton>
`;

exports[`<Button /> with icon on the right matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <span
      className="y-button--icon-wrapper-right"
    >
      <Accounts />
    </span>
    <div
      className="y-button--secondary-text"
    >
      <span
        className="y-button--icon-wrapper-right"
      >
        <Accounts />
      </span>
    </div>
  </Block>
</BaseButton>
`;

exports[`<Button /> with invalid href matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular"
  disabled={false}
  href="#"
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type=""
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with primary color matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#386cbb",
        "borderColor": "#386cbb",
        "color": "#fff",
      },
      "rootFocused": Object {
        "backgroundColor": "#2f5c9f",
        "borderColor": "#2f5c9f",
        "color": "#fff",
      },
      "rootHovered": Object {
        "backgroundColor": "#2f5c9f",
        "borderColor": "#2f5c9f",
        "color": "#fff",
      },
      "rootPressed": Object {
        "backgroundColor": "#264f8c",
        "borderColor": "#264f8c",
        "color": "#fff",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with primary color set as loading matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular y-button__state-loading"
  disabled={true}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#386cbb",
        "borderColor": "#386cbb",
        "color": "#fff",
      },
      "rootFocused": Object {
        "backgroundColor": "#2f5c9f",
        "borderColor": "#2f5c9f",
        "color": "#fff",
      },
      "rootHovered": Object {
        "backgroundColor": "#2f5c9f",
        "borderColor": "#2f5c9f",
        "color": "#fff",
      },
      "rootPressed": Object {
        "backgroundColor": "#264f8c",
        "borderColor": "#264f8c",
        "color": "#fff",
      },
    }
  }
  type="button"
>
  <Block
    className="y-button--content__hidden"
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
  <span
    className="y-button--spinner"
  >
    <Spinner
      color="dark"
      hideText={true}
      isCentered={true}
      size="small"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with reset type matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="reset"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with small size matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-small"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="small"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with small size set as loading matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-small y-button__state-loading"
  disabled={true}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="button"
>
  <Block
    className="y-button--content__hidden"
    textAlign="center"
    textSize="small"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
  <span
    className="y-button--spinner"
  >
    <Spinner
      color="light"
      hideText={true}
      isCentered={true}
      size="xSmall"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with small size with icon matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-small"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="small"
  >
    <span
      className="y-button--icon-wrapper-left"
    >
      <Accounts />
    </span>
    Click Me
    <div
      className="y-button--secondary-text"
    >
      <span
        className="y-button--icon-wrapper-left"
      >
        <Accounts />
      </span>
    </div>
  </Block>
</BaseButton>
`;

exports[`<Button /> with submit type matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type="submit"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with valid href matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__size-regular"
  disabled={false}
  href="https://www.yammer.com"
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "#fff",
        "borderColor": "#dde0e6",
        "color": "#386cbb",
      },
      "rootFocused": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootHovered": Object {
        "backgroundColor": "#fff",
        "borderColor": "#9ac3ff",
        "color": "#386cbb",
      },
      "rootPressed": Object {
        "backgroundColor": "#fff",
        "borderColor": "#6c98d9",
        "color": "#386cbb",
      },
    }
  }
  type=""
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;
